[package]
name = "ioc-checker-probe"
version = "1.0.0"
authors = ["LIFARS"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size. Comment it to optimize for speed
lto = true
#codegen-units = 1 # uncomment for smaller executable, however will result in much slower compile time
panic = 'abort'

[dependencies]
log = "0.4"
simplelog = "0.7.4"
serde = { version = "1.0.44", features = ["derive"]} # JSON
serde_json = "1.0.44"
md-5 = "0.8.0"
sha-1 = "0.8.2"
sha2 = "0.8.1"
walkdir = "2" # Directory walk in std lib does not yet have stable API
regex = "1"
config = "0.9"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.0"
minreq = { version = "*", features = ["https", "json-using-serde", "punycode"] }
base64 = "0.11.0"
netstat = "0.7.0"
dns-lookup = "1.0.1"
sysinfo = "0.11.1"
rustls-native-certs = "0.2.1"
rustls = "0.16"
dirs = "2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser", "std", "handleapi", "processthreadsapi", "fileapi", "libloaderapi", "memoryapi", "winspool", "securitybaseapi"] }
widestring = "0.4.0"
winreg = "0.6"
